# Perseus

./: .gitignore  Board.h  CMakeCache.txt  CMakeLists.txt  Makefile  Perseus.sln  Perseus.vcxproj  Perseus.vcxproj.filters  README.md  bitboard.h  cmake_install.cmake  geometry.cpp  geometry.h  main.cpp  move.cpp  move.h  move_generation.cpp  move_generation.h  perseus  random.h  square.h  state.cpp  state.h  string_transforms.cpp  test.cpp  tests_include-b12d07c.cmake  types.h
src/: bitboard.h  main.cpp  move_generation.cpp  move_generation.h  network.cpp  network.h  py_chessnetwork.cpp  py_chessnetwork.h  state.cpp  state.h  string_transforms.cpp  string_transforms.h  test.cpp
tests/: test_all.cpp  test_bitboard.cpp
